--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,21 @@ code {
     monospace;
 }
 
+.nav {
+  border-bottom: 1px blue solid;
+  width: 100%;
+}
+.nav ul {
+  max-width: 768px;
+  margin: 16px auto
+}
+.nav ul li {
+  display: inline-block;
+  padding-right: 24px
+}
+
 .container {
-  margin: 0 auto;
+  margin: 16px auto;
   max-width: 768px;
 }
 
@@ -23,27 +36,93 @@ code {
   border-radius: 4px;
   padding: 16px;
 }
-
+.question-list button {
+  background-color: #FF9500;
+  border: 1px black solid;
+  width: 50%;
+  padding: 8px;
+  font-weight: bold;
+}
+.question-list button:active {
+  background-color: white;
+}
 .question-list ul {
   padding: 0;
 }
-
 .question-list ul li {
   display: block;
-  border: 1px grey solid;
-  border-radius: 2px;
-  margin-top: 16px;
-  padding: 16px;
 }
 
-.question-list ul li div {
-  display: inline-block;
-  border: 1px green solid;
+.question {
+  color: #FFFFFF;
+}
+.question h3 {
+  background-color: #FF9500;
+  border-radius: 4px 4px 0 0;
+  color: black;
+  margin: 0;
+  padding: 16px 32px;
+}
+.question .question-wrapper {
+  background-color: black;
+  border-radius: 0 0 4px 4px;
+  display: flex;
+  align-items: stretch;
+  padding: 32px;
+}
+.question .question-wrapper img {
+  width: 30%;
+  height: 30%;
+  padding-right: 32px;
+  margin: auto 0;
+}
+.question .question-wrapper .question-options {
+  border-left: 2px #FF9500 solid;
+  padding-left: 32px;
+  width: 100%;
+}
+.question .question-wrapper .question-options span {
+  margin-left: 12px;
+  font-size: 20px;
+}
+.question .question-wrapper .question-options input[type='submit'] {
+  background-color: #FF9500;
+  border: none;
+  border-radius: 4px;
+  color: #FFFFFF;
+  display: block;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 12px;
+  margin-top: 24px;
+  width: 100%;
+}
+.question .question-wrapper .question-result {
+  border: 1px #FF9500 solid;
+  border-radius: 4px;
+  padding: 8px;
+  position: relative;
+  margin-top: 32px;
+}
+.question .question-wrapper .question-result.true {
+  background-color: rgb(100, 58, 0, .6);
+}
+.question .question-wrapper .question-result.true:after {
+  background-color: #FF9500;
+  border-radius: 50%;
+  content: 'your vote';
+  position: absolute;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 14px;
+  top: -20px;
+  right: -20px;
+  height: 40px;
+  width: 40px;
 }
 
-img {
-  display: inline-block;
-  height: 80px;
-  width: 80px;
-  padding: 20px
+textarea {
+  display: block;
 }
